# Deep-Learning-Experiments

./: main.py  pyproject.toml
versions/2023/gan/demo/: cgan_mnist.ipynb  dcgan_mnist.ipynb
versions/2023/vae/demo/: cvae_mnist.ipynb  vae_mnist.ipynb
