[project]
name = "deep-learning-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "librosa>=0.11.0",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pillow>=12.0.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "wandb>=0.22.2",
]
